Fix spacing on post list

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,12 +172,11 @@
 
 .post-list {
     margin-left: 0;
-    padding-top: 12px;
     list-style: none;
 
     > li {
         /*margin-bottom: $spacing-unit;*/
-        margin-bottom: 15px;
+        padding-top: 15px;
     }
 }
 
